k8s/infra/konoha/identity-system/ldap/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openldap
  namespace: auth-system
spec:
  selector:
    matchLabels:
      app: openldap
  serviceName: "ldap"
  replicas: 1
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
        - name: openldap
          image: osixia/openldap:latest
          ports:
          - containerPort: 389
            protocol: TCP
            name: ldap
          resources:
            requests:
              memory: "50Mi"
              cpu: "5m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          volumeMounts:
          - name: config
            mountPath: /etc/ldap/slapd.d
          - name: db
            mountPath: /var/lib/ldap
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Mi
      storageClassName: local-path
  - metadata:
      name: db
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 5Mi
      storageClassName: local-path
