k8s/infra/konoha/identity-system/ldap/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: phpldapadmin
