k8s/infra/konoha/identity-system/ldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap
spec:
  ports:
  - name: ldap
    port: 389
    targetPort: ldap
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: openldap
