k8s/infra/konoha/identity-system/ldap/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: openldap-ingress
spec:
  entryPoints:
    - ldaps
  routes:
  - match: HostSNI(`*`)
    services:
    - name: openldap
      port: 389
  tls:
    domains:
      - main: ldap.id.duck.moe
        sans:
          - ldap.id.theleachfamily.me.uk
    secretName: openldap-cert
